<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureConverter"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="Convert:"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="From:"
                android:textSize="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_text"
                    android:textSize="24dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit_text"
                    android:textSize="24dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin_text"
                    android:textSize="24dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rankine_text"
                    android:textSize="24dp"/>

            </RadioGroup>

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="To:"
                android:textSize="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_text"
                    android:textSize="24dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit_text"
                    android:textSize="24dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin_text"
                    android:textSize="24dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rankine_text"
                    android:textSize="24dp"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|bottom">

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_button"
            android:textSize="24dp"
            android:layout_gravity="center|bottom"
            android:padding="20dp">
        </Button>

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_text"
            android:textSize="24dp"
            android:layout_gravity="center|bottom"
            android:padding="20dp">
        </TextView>

        <TextView
            android:id="@+id/calculation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculation_text"
            android:textSize="24dp"
            android:layout_gravity="center|bottom"
            android:padding="10dp">
        </TextView>

    </LinearLayout>

</LinearLayout>
